# WorkAndroid

./: ReadMe.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/bitmapoper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  rgbtopng.cpp  rgbtopng.h
app/src/main/cpp/include/png/: pngconf.h  pnginfo.h
app/src/main/java/com/example/bitmapoper/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bitmapoper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
